[tool.poetry]
name = "TrabajoFinal-Complejidad-Algoritmica-Backend"
version = "0.1.0"
description = "FastAPI application from backend to make operations in graph"
authors = ["Diego22rct"]

[tool.poetry.dependencies]
python = ">=3.9"
fastapi = "^0.63.0"
uvicorn = "^0.13.4"
pandas = "^2.1.3"
requests = "^2.31.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"